--- a/index.html
+++ b/index.html
@@ -32,5 +32,71 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js"></script>
 
     <script type="module" src="./main.js"></script>
+    <script>
+      (function () {
+        function hasDebugFlag() {
+          try {
+            const params = new URLSearchParams(window.location.search);
+            return (
+              params.get('debug') === '1' ||
+              window.localStorage.getItem('DEBUG_S2') === '1'
+            );
+          } catch (_) {
+            return false;
+          }
+        }
+        function inject(tag, attrs, onload) {
+          const el = document.createElement(tag);
+          for (const k in attrs) el.setAttribute(k, attrs[k]);
+          if (onload) {
+            el.addEventListener('load', function () { onload(); });
+          }
+          document.head.appendChild(el);
+          return el;
+        }
+        let assetsLoading = false;
+        let assetsLoaded = false;
+        function loadOverlayAssets(cb) {
+          if (assetsLoaded) { cb && cb(); return; }
+          if (assetsLoading) {
+            const id = setInterval(function () {
+              if (assetsLoaded) { clearInterval(id); cb && cb(); }
+            }, 50);
+            return;
+          }
+          assetsLoading = true;
+          const cbv = Date.now().toString();
+          inject('link', { rel: 'stylesheet', href: './debug/debug-overlay.css?cb=' + cbv });
+          inject('script', { src: './debug/debug-overlay.js?cb=' + cbv }, function () {
+            assetsLoaded = true;
+            assetsLoading = false;
+            cb && cb();
+          });
+        }
+        function toggleOverlay() {
+          if (window.__S2_DEBUG__) {
+            window.__S2_DEBUG__.toggle();
+            return;
+          }
+          loadOverlayAssets(function () {
+            if (window.__S2_DEBUG__) window.__S2_DEBUG__.toggle();
+          });
+        }
+        // Global Shift+D to toggle, even if not preloaded
+        window.addEventListener('keydown', function (e) {
+          if (e.key === 'D' && e.shiftKey && !e.altKey && !e.ctrlKey && !e.metaKey) {
+            e.preventDefault();
+            toggleOverlay();
+          }
+        }, { passive: false });
+        if (hasDebugFlag()) {
+          loadOverlayAssets(function () {
+            if (window.__S2_DEBUG__ && window.__S2_DEBUG__.show) {
+              window.__S2_DEBUG__.show();
+            }
+          });
+        }
+      })();
+    </script>
   </body>
 </html>
