Add cache-busting query to main.js script tag for hybrid screen transition fix.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js"></script>
 
-    <script type="module" src="./main.js"></script>
+    <script src="./main.js?v=hybrid-fix-1"></script>
     <script>
       (function () {
         function hasDebugFlag() {
